@@ -2177,3 +2177,15 @@ Wed Sep 22 10:44:34 PDT 1999
 (Raster)
 
 update TODO
+
+-------------------------------------------------------------------------------
+
+Wed Sep 22 13:37:41 PDT 1999
+(Raster)
+
+the remember dialog not coming up bug.. fixed.. :)
+
+*should* have fixed soem multihead issues - have still to test..
+(shoudl restart correctly, exit correcttly, restart anotherwm correctly and
+restart themes correctly)
+
